Minor fix for emoji spacing on the footer

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -31,7 +31,7 @@ body > footer {
 		}
 
 		span {
-			margin: $space-tiny;
+			margin-bottom: $space-tiny;
 			margin-right: -$space-tiny - 1px;
 			writing-mode: initial;
 
